[gd_scene load_steps=15 format=3 uid="uid://luc55pv373ux"]

[ext_resource type="Texture2D" uid="uid://dcmiqwts41yq0" path="res://pong_assets/left_pallete.png" id="1_4g1hw"]
[ext_resource type="Script" path="res://pong.gd" id="1_tkadv"]
[ext_resource type="Texture2D" uid="uid://cq1in2pck5e4g" path="res://pong_assets/right_pallete.png" id="2_futhr"]
[ext_resource type="Script" path="res://left_pad.gd" id="2_s5n52"]
[ext_resource type="Script" path="res://right_pad.gd" id="3_7nhhb"]
[ext_resource type="Texture2D" uid="uid://cae8u51qmgwhb" path="res://pong_assets/separator.png" id="3_hklwn"]
[ext_resource type="Texture2D" uid="uid://ug2t25yk16yc" path="res://pong_assets/ball.png" id="4_xahnf"]
[ext_resource type="Texture2D" uid="uid://tb1sun6vwmna" path="res://pong_assets/plank.png" id="6_yyert"]
[ext_resource type="Script" path="res://ball.gd" id="7_sxc3h"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_131ar"]
radius = 4.0
height = 34.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5dxqm"]
radius = 4.0
height = 34.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fywpj"]
radius = 4.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vnwrq"]
size = Vector2(641, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_abchb"]
size = Vector2(638, 19)

[node name="root" type="Node2D"]
script = ExtResource("1_tkadv")

[node name="left_pad" type="Area2D" parent="."]
position = Vector2(67, 200)
script = ExtResource("2_s5n52")

[node name="left_sprite" type="Sprite2D" parent="left_pad"]
texture = ExtResource("1_4g1hw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_pad"]
shape = SubResource("CapsuleShape2D_131ar")

[node name="right_pad" type="Area2D" parent="."]
position = Vector2(577, 200)
script = ExtResource("3_7nhhb")

[node name="right_sprite" type="Sprite2D" parent="right_pad"]
texture = ExtResource("2_futhr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_pad"]
shape = SubResource("CapsuleShape2D_5dxqm")

[node name="seperator" type="Sprite2D" parent="."]
position = Vector2(320, 200)
texture = ExtResource("3_hklwn")

[node name="ball" type="RigidBody2D" parent="."]
position = Vector2(320, 200)
gravity_scale = 0.0
script = ExtResource("7_sxc3h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball"]
shape = SubResource("CircleShape2D_fywpj")

[node name="ball_sprite" type="Sprite2D" parent="ball"]
texture = ExtResource("4_xahnf")

[node name="top_wall" type="StaticBody2D" parent="."]
position = Vector2(322, 9)

[node name="Sprite2D" type="Sprite2D" parent="top_wall"]
scale = Vector2(2.15588, 0.2825)
texture = ExtResource("6_yyert")

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_wall"]
position = Vector2(-3, -1.52588e-05)
shape = SubResource("RectangleShape2D_vnwrq")

[node name="btm_wall" type="StaticBody2D" parent="."]
position = Vector2(323, 391)

[node name="Sprite2D" type="Sprite2D" parent="btm_wall"]
scale = Vector2(2.156, 0.282)
texture = ExtResource("6_yyert")

[node name="CollisionShape2D" type="CollisionShape2D" parent="btm_wall"]
position = Vector2(-3, -0.5)
shape = SubResource("RectangleShape2D_abchb")

[node name="left_score" type="Label" parent="."]
offset_left = 265.0
offset_top = 26.0
offset_right = 305.0
offset_bottom = 49.0
text = "0"
horizontal_alignment = 1

[node name="right_score" type="Label" parent="."]
offset_left = 336.0
offset_top = 25.0
offset_right = 376.0
offset_bottom = 51.0
text = "0"
horizontal_alignment = 1

[connection signal="area_entered" from="left_pad" to="." method="_on_left_pad_area_entered"]
[connection signal="area_entered" from="right_pad" to="." method="_on_right_pad_area_entered"]
[connection signal="ball_out_left" from="ball" to="." method="_on_ball_ball_out_left"]
[connection signal="ball_out_right" from="ball" to="." method="_on_ball_ball_out_right"]
